added a line to test committing capabilites of myself...

--- a/RPS2.html
+++ b/RPS2.html
@@ -107,3 +107,5 @@ const computerSelection = getcomputerChoice();
 </body>
 </html>
 
+this is a change I am making to line 
+one-hundred-and-ten to train my skills
